creating actors to consume tweets

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.vertica.jdbc.Driver
-db.default.url="jdbc:vertica://192.168.209.128:5433/VMart"
+db.default.url="jdbc:vertica://192.168.209.129:5433/VMart"
 db.default.user=dbadmin
 db.default.password=""
 db.default.schema="public"
@@ -52,6 +52,8 @@ twitter.oauth.consumerKey="N3GTO7CFoIikii3067SRBGxbk"
 twitter.oauth.consumerSecret="Fc2tQlaI9z7t5gGOeQ6FFSHfQwTYzFssdZHcgRPIFpXdxPx78H"
 twitter.oauth.accessToken="42471845-97Ru5NO7woXEfAWfLFkxir1jhbdYC52tCD0GGNaug"
 twitter.oauth.accessTokenSecret="tmXfHH72PtyS0BCLeoQe03hN44dLrYMKBMZ11K2GLx9XY"
+
+# IDOL Platform
 
 
 # Akka
