--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,7 +53,9 @@ twitter.oauth.consumerSecret="Fc2tQlaI9z7t5gGOeQ6FFSHfQwTYzFssdZHcgRPIFpXdxPx78H
 twitter.oauth.accessToken="42471845-97Ru5NO7woXEfAWfLFkxir1jhbdYC52tCD0GGNaug"
 twitter.oauth.accessTokenSecret="tmXfHH72PtyS0BCLeoQe03hN44dLrYMKBMZ11K2GLx9XY"
 
-# IDOL Platform
+# HP IDOL Platform
+hp.idol.analyze.sentiment.uri="https://api.idolondemand.com/1/api/sync/analyzesentiment/v1?url=%TWEET%&apikey=%API_KEY%"
+hp.idol.api.key="ef5bff01-7eef-407a-9534-b5bfb00704ba"
 
 
 # Akka
