redis and d3js added + analyst behaviour

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,6 +43,11 @@ db.default.jndiName=DefaultDS
 # JPA
 jpa.default=defaultPersistenceUnit
 
+
+# Redis
+redis.host=192.168.209.129
+
+
 # Hibernate
 logger.org.hibernate=DEBUG
 logger.org.hibernate.type=TRACE
