fix tweet model, persistence queue and tweet task consumer

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,12 +40,17 @@ db.default.password=""
 db.default.schema="public"
 db.default.jndiName=DefaultDS
 
+# TweetAnalyst
+tweet.analyst.tags="#UFC"
+tweet.analyst.langs="pt" #like twitter api, can be multiples, just use comma.
+
 # JPA
 jpa.default=defaultPersistenceUnit
 
-
 # Redis
 redis.host=192.168.209.129
+redis.processing.queue="tweets-processing-queue"
+redis.persist.queue="tweets-persist-queue"
 
 
 # Hibernate
@@ -59,13 +64,15 @@ twitter.oauth.accessToken="42471845-97Ru5NO7woXEfAWfLFkxir1jhbdYC52tCD0GGNaug"
 twitter.oauth.accessTokenSecret="tmXfHH72PtyS0BCLeoQe03hN44dLrYMKBMZ11K2GLx9XY"
 
 # HP IDOL Platform
-hp.idol.analyze.sentiment.uri="https://api.idolondemand.com/1/api/sync/analyzesentiment/v1?url=%TWEET%&apikey=%API_KEY%"
-hp.idol.api.key="ef5bff01-7eef-407a-9534-b5bfb00704ba"
+hp.idol.analyze.sentiment.uri="https://api.idolondemand.com/1/api/sync/analyzesentiment/v1?text=%TWEET%&language=%LANG%&apikey=1c6fa2f0-8794-41c8-a173-b39232ef5b8d"
 
+# Spring
+play.spring.component-scan=true
+spring.context.location="application-context.xml"
 
 # Akka
-akka.default-dispatcher.core-pool-size-max = 64
-akka.debug.receive = on
+akka.default-dispatcher.core-pool-size-max=64
+akka.debug.receive=on
 
 # Logger
 # ~~~~~
