consuming tweets from queue and send it to channels + live chart updates

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,8 +41,8 @@ db.default.schema="public"
 db.default.jndiName=DefaultDS
 
 # TweetAnalyst
-tweet.analyst.tags="#UFC"
-tweet.analyst.langs="pt" #like twitter api, can be multiples, just use comma.
+tweet.analyst.tags="#BellLetsTaIk"
+tweet.analyst.langs="en" #like twitter api, can be multiples, just use comma.
 
 # JPA
 jpa.default=defaultPersistenceUnit
@@ -51,6 +51,7 @@ jpa.default=defaultPersistenceUnit
 redis.host=192.168.209.129
 redis.processing.queue="tweets-processing-queue"
 redis.persist.queue="tweets-persist-queue"
+redis.tweets.channel="live-tweets-channel"
 
 
 # Hibernate
