live and timeline charts working in different pages

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,21 +34,21 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.vertica.jdbc.Driver
-db.default.url="jdbc:vertica://192.168.209.129:5433/VMart"
+db.default.url="jdbc:vertica://192.168.209.130:5433/VMart"
 db.default.user=dbadmin
 db.default.password=""
 db.default.schema="public"
 db.default.jndiName=DefaultDS
 
 # TweetAnalyst
-tweet.analyst.tags="#BellLetsTaIk"
-tweet.analyst.langs="en" #like twitter api, can be multiples, just use comma.
+tweet.analyst.tags="#BBB"
+tweet.analyst.langs="pt" #like twitter api, can be multiples, just use comma.
 
 # JPA
 jpa.default=defaultPersistenceUnit
 
 # Redis
-redis.host=192.168.209.129
+redis.host="192.168.209.130"
 redis.processing.queue="tweets-processing-queue"
 redis.persist.queue="tweets-persist-queue"
 redis.tweets.channel="live-tweets-channel"
