fix for timeline tweets + find by sentiment asc

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,8 +41,8 @@ db.default.schema="public"
 db.default.jndiName=DefaultDS
 
 # TweetAnalyst
-tweet.analyst.tags="#BBB"
-tweet.analyst.langs="pt" #like twitter api, can be multiples, just use comma.
+tweet.analyst.tags="$HPQ" #can be multiples, just use comma.
+tweet.analyst.langs="en" #like twitter api, can be multiples, just use comma.
 
 # JPA
 jpa.default=defaultPersistenceUnit
