appconf for actors, charts minor fixes, docs

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,8 +55,8 @@ redis.tweets.channel="live-tweets-channel"
 
 
 # Hibernate
-logger.org.hibernate=DEBUG
-logger.org.hibernate.type=TRACE
+logger.org.hibernate=INFO
+logger.org.hibernate.type=INFO
 
 # Twitter 4J OAuth
 twitter.oauth.consumerKey="N3GTO7CFoIikii3067SRBGxbk"
@@ -66,6 +66,10 @@ twitter.oauth.accessTokenSecret="tmXfHH72PtyS0BCLeoQe03hN44dLrYMKBMZ11K2GLx9XY"
 
 # HP IDOL Platform
 hp.idol.analyze.sentiment.uri="https://api.idolondemand.com/1/api/sync/analyzesentiment/v1?text=%TWEET%&language=%LANG%&apikey=1c6fa2f0-8794-41c8-a173-b39232ef5b8d"
+
+#Tweet Analyst Actor System
+tweet.harvester.on=false
+tweet.receiver.on=true
 
 # Spring
 play.spring.component-scan=true
