logs, new keys twitter4j

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,8 +33,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
+
+# VerticaDB
 db.default.driver=com.vertica.jdbc.Driver
-db.default.url="jdbc:vertica://192.168.209.131:5433/VMart"
+db.default.url="jdbc:vertica://192.168.209.132:5433/VMart"
 db.default.user=dbadmin
 db.default.password=""
 db.default.schema="public"
@@ -48,7 +50,7 @@ tweet.analyst.langs="en" #like twitter api, can be multiples, just use comma.
 jpa.default=defaultPersistenceUnit
 
 # Redis
-redis.host="192.168.209.131"
+redis.host="192.168.209.132"
 redis.processing.queue="tweets-processing-queue"
 redis.persist.queue="tweets-persist-queue"
 redis.tweets.channel="live-tweets-channel"
@@ -59,8 +61,8 @@ logger.org.hibernate=INFO
 logger.org.hibernate.type=INFO
 
 # Twitter 4J OAuth
-twitter.oauth.consumerKey="N3GTO7CFoIikii3067SRBGxbk"
-twitter.oauth.consumerSecret="Fc2tQlaI9z7t5gGOeQ6FFSHfQwTYzFssdZHcgRPIFpXdxPx78H"
+twitter.oauth.consumerKey="OHFTKXK5Y4dhDmiPjsjDaLSjK"
+twitter.oauth.consumerSecret="Z51yA9BCHSsWNVe7G6eYcbXGEbuOnH5FHkEh1OHtr3I1VyLEIh"
 twitter.oauth.accessToken="42471845-97Ru5NO7woXEfAWfLFkxir1jhbdYC52tCD0GGNaug"
 twitter.oauth.accessTokenSecret="tmXfHH72PtyS0BCLeoQe03hN44dLrYMKBMZ11K2GLx9XY"
 
@@ -68,8 +70,8 @@ twitter.oauth.accessTokenSecret="tmXfHH72PtyS0BCLeoQe03hN44dLrYMKBMZ11K2GLx9XY"
 hp.idol.analyze.sentiment.uri="https://api.idolondemand.com/1/api/sync/analyzesentiment/v1?text=%TWEET%&language=%LANG%&apikey=1c6fa2f0-8794-41c8-a173-b39232ef5b8d"
 
 #Tweet Analyst Actor System
-tweet.harvester.on=false
-tweet.receiver.on=true
+tweet.harvester.on=false // turned off by default cause we already have 10K+ tweets in the db.
+tweet.receiver.on=true // turned on by default cause we want to receive tweets from stream API.
 
 # Spring
 play.spring.component-scan=true
